# MIPT-Compilers

./: .gitmodules  README.md  README_ru.md
AbstractSyntaxTree/: CMakeLists.txt  README.md  driver.cpp  driver.hh  main.cpp  parser.y  scanner.h  scanner.l
AbstractSyntaxTree/Declaration/: ArrayDeclaration.hpp  Declaration.hpp  DeclarationList.hpp  Formal.hpp  FormalList.hpp  MethodDeclaration.hpp  VariableDeclaration.hpp
AbstractSyntaxTree/Expression/: AddExpression.hpp  ArrayAccessExpression.hpp  BoolExpression.hpp  DivExpression.hpp  Expression.hpp  GreaterEqualExpression.hpp  GreaterExpression.hpp  LessEqualExpression.hpp  NotExpression.hpp  OrExpression.hpp
AbstractSyntaxTree/NamedEntity/: NamedArray.hpp  NamedArrayElement.hpp  NamedEntity.hpp
AbstractSyntaxTree/Objects/: ArrayObject.hpp
AbstractSyntaxTree/Objects/ObjectTypes/: ObjectType.hpp  PrimitiveArrayType.hpp
AbstractSyntaxTree/Service/: ClassStorage.hpp  MainClass.hpp  Program.hpp  TreeNode.hpp  forward_decl.hpp
AbstractSyntaxTree/Statement/: ArrayAssignmentStatement.hpp  ArrayDeclarationStatement.hpp  ArrayElementAssignmentStatement.hpp  AssignmentStatement.hpp  IfStatement.hpp  ReturnStatement.hpp  StatementList.hpp  VariableDeclarationStatement.hpp  WhileStatement.hpp
AbstractSyntaxTree/SymbolTable/: Symbol.hpp
AbstractSyntaxTree/Types/: ArrayType.hpp  SimpleType.hpp  Type.hpp
AbstractSyntaxTree/Visitors/: Interpreter.hpp  PrintVisitor.hpp  SymbolTreeVisitor.hpp  Visitor.hpp  include_list.hpp
AbstractSyntaxTree/Visitors/InterpreterValues/: BoolValue.hpp  IntValue.hpp
AbstractSyntaxTree/examples/: example1.in  example2.in  example3.in  example4.in
Compiler/: CMakeLists.txt  README.md  driver.cpp  main.cpp
Compiler/Grammar/: README.md  driver.cpp  driver.hh  location.hh  parser.y  scanner.h  scanner.l
Compiler/Grammar/Declaration/: ClassDeclaration.hpp  ClassDeclarationList.hpp  Declaration.hpp  DeclarationList.hpp  Formal.hpp  FormalList.hpp  MethodDeclaration.hpp  VariableDeclaration.hpp
Compiler/Grammar/Expression/: AddExpression.hpp  AndExpression.hpp  ArrayAccessExpression.hpp  ArrayLengthExpression.hpp  BoolExpression.hpp  DivExpression.hpp  EqualExpression.hpp  Expression.hpp  ExpressionList.hpp  GreaterEqualExpression.hpp  GreaterExpression.hpp  IdentExpression.hpp  IntExpression.hpp  LessEqualExpression.hpp  LessExpression.hpp  MethodInvocationExpression.hpp  ModExpression.hpp  MulExpression.hpp  NewArrayExpression.hpp  NewExpression.hpp  NotExpression.hpp  OrExpression.hpp  SubExpression.hpp  ThisExpression.hpp
Compiler/Grammar/NamedEntity/: NamedArrayElement.hpp  NamedEntity.hpp  NamedVariable.hpp
Compiler/Grammar/Service/: ClassStorage.hpp  MainClass.hpp  MethodInvocation.hpp  Program.hpp  TreeNode.hpp  forward_decl.hpp
Compiler/Grammar/Statement/: AssertStatement.hpp  AssignmentStatement.hpp  IfElseStatement.hpp  IfStatement.hpp  MethodInvocationStatement.hpp  PrintStatement.hpp  ReturnStatement.hpp  ScopeStatement.hpp  Statement.hpp  StatementList.hpp  VariableDeclarationStatement.hpp  WhileStatement.hpp
Compiler/Grammar/Type/: ArrayType.hpp  SimpleType.hpp  Type.hpp
Compiler/IRTree/: CMakeLists.txt
Compiler/IRTree/Blocks/: Block.hpp  BlockGraph.hpp  ConditionalBlock.hpp  SimpleBlock.hpp  Trace.hpp
Compiler/IRTree/Generators/: Label.cpp  Label.h  Temporary.cpp  Temporary.h
Compiler/IRTree/Instructions/: ControlFlowGraph.hpp  Instruction.hpp  InterferenceGraph.hpp
Compiler/IRTree/Nodes/: BaseElement.hpp  ExpressionList.hpp
Compiler/IRTree/Nodes/Expression/: BinopExpression.hpp  CallExpression.hpp  ConstExpression.hpp  EseqExpression.hpp  Expression.hpp  MemExpression.hpp  NameExpression.hpp  TempExpression.hpp
Compiler/IRTree/Nodes/Statement/: ExpStatement.hpp  JumpConditionalStatement.hpp  JumpStatement.hpp  LabelStatement.hpp  MoveStatement.hpp  SeqStatement.hpp  Statement.hpp
Compiler/IRTree/TreeWrapper/: ExpressionWrapper.hpp  StatementWrapper.hpp  SubtreeWrapper.hpp
Compiler/IRTree/TreeWrapper/ConditionalWrapper/: AndConditionalWrapper.hpp  ConditionalWrapper.hpp  NegateConditionalWrapper.hpp  OrConditionalWrapper.hpp  RelativeConditionalWrapper.hpp
Compiler/IRTree/Types/: BinaryOperatorType.hpp  LogicOperatorType.hpp
Compiler/IRTree/Visitors/: BaseElements.h  BlockBorderVisitor.cpp  BlockBorderVisitor.h  BlockBuildVisitor.cpp  BlockBuildVisitor.h  CodeGenerationVisitor.cpp  CodeGenerationVisitor.h  DoubleCallEliminateVisitor.cpp  DoubleCallEliminateVisitor.h  ESEQEliminateVisitor.cpp  ESEQEliminateVisitor.h  LinearizationVisitor.cpp  LinearizationVisitor.h  PrintVisitor.cpp  PrintVisitor.h  TemplateVisitor.hpp  Visitor.h  VisitorStruct.h  forward_decl.hpp
Compiler/MemberType/: ClassType.hpp  MemberType.hpp  MethodType.hpp  PrimitiveArrayType.hpp  PrimitiveSimpleType.hpp  PrimitiveType.hpp  README.md
Compiler/MethodMechanisms/: Frame.hpp  FrameTranslator.cpp  FrameTranslator.h  FunctionTable.hpp
Compiler/MethodMechanisms/Address/: Address.hpp  AddressInFrame.hpp  AddressInRegister.hpp
Compiler/Objects/: ArrayObject.cpp  ArrayObject.h  ArrayObject.hpp  Object.hpp  SimpleObject.cpp  SimpleObject.h  SimpleObject.hpp  VariableObject.hpp
Compiler/Objects/ObjectTypes/: ClassType.hpp  MethodType.hpp  PrimitiveSimpleType.hpp  PrimitiveType.hpp
Compiler/SymbolTable/: ClassStorage.hpp  README.md  ScopeLayer.hpp  ScopeLayerTree.hpp  Symbol.hpp
Compiler/Types/: ArrayType.hpp  SimpleType.hpp  Type.hpp
Compiler/Visitors/: IRTreeBuildVisitor.cpp  IRTreeBuildVisitor.h  MethodCallVisitor.cpp  MethodCallVisitor.h  PrintVisitor.hpp  SymbolTreeVisitor.hpp  TemplateVisitor.hpp  TypeVisitor.hpp  Visitor.hpp  include_list.hpp
Compiler/Visitors/InterpreterValues/: Value.hpp
Compiler/examples/: example1.in  example2.in  example3.in  example4.in  example5.in  example6.in
NaiveInterpreter/: README.md  driver.hh  location.hh  main.cpp  parser.gv  parser.y  scanner.l
docker/: README.md  create.sh  login.sh  (+4 more)
naive-interpreter/: CMakeLists.txt  README.md  driver.cpp  driver.hh  location.hh  parser.cpp  parser.hh  parser.y  scanner.cpp  scanner.l
(+5 files in other folders)
